text alignment fixed

--- a/style.css
+++ b/style.css
@@ -311,23 +311,26 @@ input[type=submit], button {
 	background: white;
 }
 .add_user_form_labels {
-	position: absolute;
+	position: relative;
+	width: 100px;
+	float: left;
 	padding: 0px;
 	top: 2px;
 }
-.add_user_form_labels span {
-	padding: 0px;
+.add_user_form_labels div { 
+	display: block;
+	padding-bottom: 30px;
 	margin: 0px;
-	top: 0px;
-	height: 10px;
-	max-height: 10px;
+	height: 20px;
+	width: 100%;
 	float: left;
+	text-align: right;
 }
 .add_user_form {
-	position: relative;
+	position: absolute;
 	float: left;
 	top: 0;
-	left: 100px;
+	left: 110px;
 	width: 190px;
 }
 .add_user_form input[type=checkbox]{
@@ -371,8 +374,8 @@ input[type=submit], button {
 .close_user_popup {
 	padding: 0px;
 	position: absolute;
-	top: 10px;
-        left: 257px;
+	top: 5px;
+        left: 263px;
 	height: 30px;
 	width: 30px;
 	float: right;
